--- a/www/style.css
+++ b/www/style.css
@@ -1,8 +1,8 @@
 :root {
 	--primary: hsl(200, 100%, 25.5%);
-  --darkest-grey: hsl(200, 50%, 12.5%);
-  --grey: hsl(200, 0%, 90%);;
-  --lightest-grey: #fff;
+	--darkest-grey: hsl(200, 50%, 12.5%);
+	--grey: hsl(200, 0%, 90%);;
+	--lightest-grey: #fff;
 }
 
 html {
@@ -16,7 +16,7 @@ img {
 
 img, nav {
 	box-sizing: border-box;
-  box-shadow: 0 1px 5px 0 rgb(0 0 0 / 10%);
+	box-shadow: 0 1px 5px 0 rgb(0 0 0 / 10%);
 }
 
 blockquote {
@@ -52,7 +52,7 @@ nav {
 	position: sticky;
 	top: 0;
 	background: white;
-	
+
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
 	padding-left: 64px;
@@ -71,7 +71,7 @@ nav a {
 }
 
 nav a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 main {
@@ -79,16 +79,32 @@ main {
 	padding-right: max(64px, calc(50% - 360px));
 	padding-top: 2rem;
 	padding-bottom: 2rem;
-  
+
 	display: flex;
-  flex-direction: column;
-  align-items: center;
+	flex-direction: column;
+	align-items: center;
 
 	line-height: 1.375;
 }
 
 main a {
 	font-weight: bold;
+}
+
+dl {
+	text-align: left;
+	width: 100%;
+}
+dt {
+	float: left;
+	clear: left;
+	text-align: left;
+	font-weight: bold;
+}
+
+dd {
+	text-align: left;
+	margin: 0 0 0 6.4em;
 }
 
 #links {
@@ -103,8 +119,8 @@ main a {
 #home {
 	display: flex;
 	justify-content: center;
-  align-items: center;
-  height: 100%;
+	align-items: center;
+	height: 100%;
 }
 
 @media screen and (max-width: 1024px) {
@@ -116,9 +132,9 @@ main a {
 
 @media screen and (max-width: 640px) {
 	main, nav {
-  	padding-left: 32px;
+		padding-left: 32px;
 		padding-right: 32px;
-  }
+	}
 }
 
 .contact {
@@ -135,5 +151,5 @@ main a {
 
 #date {
 	font-style: italic;
-  text-align: right;
+	text-align: right;
 }
