--- a/www/style.css
+++ b/www/style.css
@@ -3,8 +3,7 @@
 	--darkest-grey: hsl(200, 10%, 15%);
 	--grey: hsl(200, 0%, 90%);;
 	--lightest-grey: #fff;
-	--bg: hsl(20, 50%, 99%);
-
+	--bg: hsl(20, 50%, 97.5%);
 }
 
 html {
@@ -40,12 +39,23 @@ h1, h2, h3, ul {
 
 h1, h2, h3 {
 	font-variant: small-caps;
-	margin: 0.5em 0 0.5em 0;
+	margin: 0;
 }
 
-h1 { font-size: 130%; }
-h2 { font-size: 120%; }
-h3 { font-size: 110%; }
+h1 { 
+	font-size: 140%;
+	margin: 0.5em 0 0.25em 0;
+}
+
+h2 { 
+	font-size: 125%; 
+	margin: 0.4em 0 0.2em 0;
+}
+
+h3 { 
+	font-size: 110%; 
+	margin: 0.3em 0 0.15em 0;
+}
 
 header, div, p {
 	width: 100%;
@@ -100,15 +110,16 @@ main a {
 	font-weight: bold;
 }
 
-p {
-	margin: 0 0.5em 0 0.5em;
+p, ul {
+	margin: 0.16em 0 0.16em 0;
 }
 
 dl {
 	text-align: left;
 	width: 100%;
-	margin: 0 0 8px 0;
+	margin: 0.5em 0 0.5em 0;
 }
+
 dt {
 	float: left;
 	clear: left;
@@ -122,6 +133,8 @@ dd {
 }
 
 table {
+	width: 100%;
+	padding: 0;
 	border: 1px solid var(--darkest-grey);
 }
 
