--- a/www/style.css
+++ b/www/style.css
@@ -13,7 +13,7 @@
 			hsl(var(--hue), 100%, 10%),
 			hsl(var(--hue), 100%, 25%)
 		);
-  --outer-padding: max(1rem, 2vh);
+  --outer-padding: max(0.75rem, 1vh);
   --box-shadow:  
  					0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.25),
  					0 0.375rem 1.25rem 0 rgba(0, 0, 0, 0.25);
@@ -39,7 +39,7 @@ body {
 
 nav {
 	margin: 0;
-	background: linear-gradient(#000000ff, #0000007f);
+	background: #1F1F1F; /*linear-gradient(#000000ff, #0000007f);*/
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -118,7 +118,7 @@ html,body {
 	background: var(--light-bg);
 }
 
-main, #benefits, .service, #about, #contact {
+#benefits, .service, #about, #contact {
 	padding-left: var(--horizontal-padding);
 	padding-right: var(--horizontal-padding);
 }
@@ -129,21 +129,38 @@ body {
 }
 
 #hero {
-	box-sizing: border-box;
-	height: max(100vh, 32rem);
 	display: flex;
-	flex-direction: column;
-	color: var(--light-fg);
-
+	flex-direction: column;  
+	align-items: center;
+	justify-content: center;
+	justify-content: center;
+	height: max(90vh, 32rem);
 	background-image: url("img/hashed/hero-42dfafe7792ebc52.webp");
 	/* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+	color: var(--light-fg);
 	-webkit-background-size: cover;
+	/*
+	box-sizing: border-box;
+
+	width: 100%;
+	text-align: center;
+	padding-bottom: 4rem;
+	box-sizing: border-box;
+	background: linear-gradient(180deg, #00000000, #0000007f);
+
+	*/
 }
 
-main a {
+#hero div {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+#hero a {
 	text-decoration: none;
 	border-radius: var(--border-radius);
 	padding: 1.5rem;
@@ -169,26 +186,12 @@ main a {
 
 }
 
-main {
-	display: flex;
-	flex-direction: column;  
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	color: var(--white-fg);
-	text-align: center;
-	padding-bottom: 4rem;
-	box-sizing: border-box;
-	height: 100%;
-	background: linear-gradient(180deg, #00000000, #0000007f)
-}
-
-main h1 {
+#hero h1 {
 	padding: 0;
 	text-decoration: none;
 }
 
-main h1, main p {
+#hero h1, #hero p {
   text-shadow: 
 		2px	0	0 var(--shadow),
 		0 -2px 0 var(--shadow),
@@ -196,20 +199,14 @@ main h1, main p {
 		-2px 0 0 var(--shadow);
 }
 
-main h1 span {
+#hero h1 span {
 	white-space: nowrap;
 	color: hsl(var(--hue), 100%, 55%);
 }
 
-main p {
+#hero p {
 	max-width: 40rem;
 	font-size: 125%;
-}
-
-main div {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
 }
 
 #about {
