--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -91,7 +91,7 @@
 			</span>
 		</nav>
 		<main>
-        <%= body %>
+        <%- body %>
 		</main>
 		<footer>
 			© 2023 Lewis Campbell Technologies Ltd.
