moved landing page files into own folder so they don't create 'landing.html'

--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -64,6 +64,15 @@
 				</img>
 			</a>
 			<span id="links">
+				<a href="/talks.html">Talks</a>
+				<a href="/projects.html">Projects</a>
+			</span>
+		</nav>
+		<main>
+			<%- body %>
+		</main>
+		<footer>
+			<span>
 				<a
 					href="https://twitter.com/LewisCTech"
 					aria-label="Twitter"
@@ -89,11 +98,6 @@
 					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
 				</a>
 			</span>
-		</nav>
-		<main>
-        <%- body %>
-		</main>
-		<footer>
 			© 2023 Lewis Campbell Technologies Ltd.
 		</footer>
 	</body>
