making spas a single file

--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -32,11 +32,11 @@
 		<!-- Open Graph tags for sharing links -->
 		<meta 
 			property="og:image" 
-			content="https://lewiscampbell.tech/img/LC-icon-whitebackground02-01.png"
+			content="<%= image %>"
 		/>
 		<meta 
 			property="og:title" 
-			content="<%= type %>"
+			content="<%= title %>"
 		/>
 		<meta 
 			property="og:description" 
@@ -81,19 +81,19 @@
 					<img src="img/tabler-brand-twitter.svg" alt="Twitter Logo">
 					Twitter
 				</a>
-				<a 
-					href="https://www.linkedin.com/in/lewisandrewcampbell"
-					aria-label="LinkedIn"
-				>
-					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
-					LinkedIn
-				</a>
 				<a
 					href=https://www.youtube.com/@LewisCampbellTech
 					aria-label="YouTube"
 				>
 					<img src="img/tabler-brand-youtube.svg" alt="YouTube Logo">
 					YouTube
+				</a>
+				<a 
+					href="https://www.linkedin.com/in/lewisandrewcampbell"
+					aria-label="LinkedIn"
+				>
+					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
+					LinkedIn
 				</a>
 				<a
 					href="https://github.com/LAC-Tech"
