missing opengraph image solution

--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -32,7 +32,7 @@
 		<!-- Open Graph tags for sharing links -->
 		<meta 
 			property="og:image" 
-			content="<%= image %>"
+			content="<%= image ?? '/img/me_2022.webp' %>"
 		/>
 		<meta 
 			property="og:title" 
