--- a/www/style.css
+++ b/www/style.css
@@ -1,6 +1,6 @@
 :root {
   --hue: 200;
-  --light-bg: radial-gradient(circle at center, white, #dfdfdf);
+  --light-bg: radial-gradient(circle at center, white, #efefef);
 	--light-fg: white;
 	--solid-light-bg: #efefef;
   --dark: #222;
@@ -37,6 +37,7 @@ body {
 	font-family: sans-serif;
 	font-size: clamp(1rem, 0.9375rem + 0.3125vh, 1.5rem);
 	margin: 0;
+	color: var(--dark);
 }
 
 nav {
@@ -122,7 +123,12 @@ html,body {
 }
 
 /* TODO: this should just be all elements under main, but .service ruins it */
-nav, #benefits, .service, #about, #contact, #hero {
+/*nav, #benefits, .service, #about, #contact, #hero {
+	padding-left: var(--horizontal-padding);
+	padding-right: var(--horizontal-padding);
+}*/
+
+body > * {
 	padding-left: var(--horizontal-padding);
 	padding-right: var(--horizontal-padding);
 }
@@ -204,6 +210,8 @@ body {
 	max-width: 40rem;
 	font-size: 125%;
 	background: #0000007f;
+	padding: 1rem;
+	border-radius: var(--border-radius);
 }
 
 #about {
