don't need light and dark mode if your background is grey

--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -64,8 +64,7 @@
 				</img>
 			</a>
 			<span id="links">
-				<a href="/talks.html">Talks</a>
-				<a href="/projects.html">Projects</a>
+				<a href="/blog.html">Blog</a>
 				<a href="/contact.html">Contact</a>
 			</span>
 		</nav>
@@ -73,36 +72,6 @@
 			<%- body %>
 		</main>
 		<footer>
-			<span id="socials">
-				<a
-					href="https://twitter.com/LewisCTech"
-					aria-label="Twitter"
-				>
-					<img src="img/tabler-brand-twitter.svg" alt="Twitter Logo">
-					Twitter
-				</a>
-				<a
-					href=https://www.youtube.com/@LewisCampbellTech
-					aria-label="YouTube"
-				>
-					<img src="img/tabler-brand-youtube.svg" alt="YouTube Logo">
-					YouTube
-				</a>
-				<a 
-					href="https://www.linkedin.com/in/lewisandrewcampbell"
-					aria-label="LinkedIn"
-				>
-					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
-					LinkedIn
-				</a>
-				<a
-					href="https://github.com/LAC-Tech"
-					aria-label="GitHub"
-				>
-					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
-					GitHub
-				</a>
-			</span>
 			<span id="copyright">
 				© 2023 Lewis Campbell Technologies Ltd.
 			</span>
