super minimalist styling. I love it

--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -73,7 +73,7 @@
 		</main>
 		<footer>
 			<span id="copyright">
-				© 2023 Lewis Campbell Technologies Ltd.
+				© 2021 - 2023 Lewis Campbell Technologies Ltd.
 			</span>
 		</footer>
 	</body>
