--- a/www/style.css
+++ b/www/style.css
@@ -1,58 +1,39 @@
 :root {
-  --hue: 200;
-  --light-bg: lightgray;
-	--light-fg: white;
-	--solid-light-bg: #efefef;
-	--dark-bg: #6f6f6f;
-  --dark-fg: black;
-  --border-radius: 0.5rem;
-  --shadow: #333;
-  --horizontal-padding: max(5vh, calc(50% - 33rem));
+  --bg: #ddd;
+	--fg: black;
+  --horizontal-padding: max(5vh, calc(50% - 20rem));
   --header-padding:  2.5rem;
   --primary-bg: linear-gradient(
 			135deg,
 			hsl(var(--hue), 100%, 10%),
 			hsl(var(--hue), 100%, 25%)
 		);
-  --outer-padding: max(0.75rem, 1vh);
-  --box-shadow:  
- 					0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.25),
- 					0 0.375rem 1.25rem 0 rgba(0, 0, 0, 0.25);
- 	--primary-bg-radial: radial-gradient(
-		farthest-side at 100% 50%,
-		hsl(var(--hue), 100%, 25%),
-		hsl(var(--hue), 100%, 5%));
 	--nav-height: 4rem;
-	--footer-height: 10rem;
+	--footer-height: 5rem;
 }
 
-html {
+html, body {
 	height: 100%;
-}
-
-img {
-	  border-radius: var(--border-radius);
+	margin: 0;
 }
 
 body {
 	font-family: Garamond, serif;
-	font-size: clamp(1rem, 0.9375rem + 0.3125vh, 1.5rem);
 	margin: 0;
-	color: var(--dark-fg);
-	background: var(--light-bg);
+	color: var(--fg);
+	background: var(--bg);
+	position: relative;
 }
 
 nav {
+	height: var(--nav-height);
 	margin: 0;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	overflow: hidden;
 	font-size: 125%;
 	height: var(--nav-height);
-	border-bottom: 1px;
-	margin-bottom: 2rem;
 }
 
 #links {
@@ -63,33 +44,22 @@ nav {
 	justify-items: center;
 }
 
-#links img {
-	height: 32px;
-	width: 32px;
-}
-
 #links a {
 	padding-left: 0.75rem;
 }
 
-nav a {
-
-/*	font-weight: bolder;
-	text-decoration: none;*/
-}
-
-nav a:hover {
-	text-decoration: underline;
-}
-
 main {
-	min-height: calc(100vh - var(--nav-height) - var(--footer-height));
+	min-height: calc(100vh - var(--nav-height)  - var(--footer-height));
+}
 
+footer {
+	height: var(--footer-height);
 }
 
 h1, h2, h3 {
 	font-variant: small-caps;
 	text-transform: capitalize;
+	margin: 0
 }
 
 a {
@@ -97,8 +67,6 @@ a {
 }
 
 #home {
-	background: hsl(var(--hue), 100%, 70%);
-	border-radius: var(--border-radius);
 	display: flex;
 	height: 50px;
 	width: 50px;
@@ -111,112 +79,17 @@ a {
 	width: 46px;
 }
 
-html,body {
-	height: 100%;
-}
-
-/* TODO: this should just be all elements under main, but .service ruins it */
-/*nav, #benefits, .service, #about, #contact, #hero {
-	padding-left: var(--horizontal-padding);
-	padding-right: var(--horizontal-padding);
-}*/
-
 body > * {
 	padding-left: var(--horizontal-padding);
 	padding-right: var(--horizontal-padding);
-}
-
-body {
-	background: var(--light-bg);
-	position: relative;
-}
-
-#about {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 1.25rem;
-	padding-left: 0;
-	padding-right: 0;
-	transition: opacity 0.4s ease-in-out;
-	padding: var(--horizontal-padding);
-	padding-top: 2rem;
-	padding-bottom: 2rem;
-}
-
-#about img {
-	max-height: 334px;
-	max-width: 387px;
-	width: auto;
-	height: auto;
-	justify-self: center;
-}
-
-#about div {
-	display: flex;
-	justify-content: space-around;
-	flex-flow: wrap;
-	width: 100%;
-}
-
-#about section {
-	align-self: start;
-	max-width: 32rem;
-}
-
-#testimonials {
- display: flex;
- flex-flow: row wrap;
- 
- flex-direction: row;
- justify-content: center;
- align-items: center;
-}
-
-#testimonials section {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	min-width: 12.5rem;
-	max-width: 20rem;
-	height: auto;
-	background: var(--solid-light-bg);
-	margin: 1rem;
-	color: var(--dark);
-	border-radius: var(--border-radius);
-		box-shadow: var(--box-shadow);
-}
-
-#testimonials section img {
-	height: 200px;
-	width: 200px;
-}
-
-#testimonials section h2 {
-	margin-bottom: 0;
-	color: hsl(var(--hue), 90%, 35%);
-}
-
-#testimonials section span {
-	padding: 1rem;
-	text-align: center;
-}
-
-blockquote {
-	font-style: italic;
-	width: 90%;
 }
 
 footer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	text-align: center;
 	font-style: italic;
 	height: var(--footer-height);
-}
-
-#copyright {
-	padding: 2rem;
 }
