--- a/www/style.css
+++ b/www/style.css
@@ -1,7 +1,7 @@
 :root {
-  --bg: #ddd;
+  --bg: lightgray;
 	--fg: black;
-  --horizontal-padding: max(5vh, calc(50% - 20rem));
+  --horizontal-padding: max(2vh, calc(50% - 20rem));
   --header-padding:  2.5rem;
   --primary-bg: linear-gradient(
 			135deg,
@@ -49,6 +49,9 @@ nav {
 }
 
 main {
+	box-sizing: border-box;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 	min-height: calc(100vh - var(--nav-height)  - var(--footer-height));
 }
 
@@ -59,7 +62,9 @@ footer {
 h1, h2, h3 {
 	font-variant: small-caps;
 	text-transform: capitalize;
-	margin: 0
+	margin: 0;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 }
 
 a {
