--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -37,11 +37,11 @@
 			content="<%= type %>"
 		/>
 		<title><%= title %></title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="manifest" href="manifest.json">
-		<link rel="apple-touch-icon" href="img/hashed/icon192-4295d06a36017a35.webp">
+		<link rel="apple-touch-icon" href="/img/hashed/icon192-867321d05c95c000.png">
 
-		<link rel="shortcut icon" type="image/png" href="img/hashed/icon32-a2fbcf30da694fcf.webp"/>
+		<link rel="shortcut icon" type="image/png" href="/img/hashed/icon32-86d321b0587c9800.png"/>
 		<meta name="theme-color" content="#80D4FF"/>
 	</head>
 
@@ -49,7 +49,7 @@
 		<nav>
 			<a href="/" id="home" aria-label="Home Page">
 				<img
-					src="img/hashed/icon46-112e6420dd915aad.webp"
+					src="/img/hashed/icon46-867321d05c95c000.png"
 					alt="Lewis Campbell Technologies Logo">
 				</img>
 			</a>
