all working except for console errors when the network is down

--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -38,10 +38,10 @@
 		/>
 		<title><%= title %></title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
-		<link rel="manifest" href="manifest.json">
-		<link rel="apple-touch-icon" href="/img/hashed/icon192-867321d05c95c000.png">
+		<link rel="manifest" href="/manifest.json">
+		<link rel="apple-touch-icon" href="/img/icon192-867321d05c95c000.png">
 
-		<link rel="shortcut icon" type="image/png" href="/img/hashed/icon32-86d321b0587c9800.png"/>
+		<link rel="shortcut icon" type="image/png" href="/img/icon32-86d321b0587c9800.png"/>
 		<meta name="theme-color" content="#80D4FF"/>
 	</head>
 
@@ -49,7 +49,7 @@
 		<nav>
 			<a href="/" id="home" aria-label="Home Page">
 				<img
-					src="/img/hashed/icon46-867321d05c95c000.png"
+					src="/img/icon46-867321d05c95c000.png"
 					alt="Lewis Campbell Technologies Logo">
 				</img>
 			</a>
