--- a/www/style.css
+++ b/www/style.css
@@ -95,10 +95,14 @@ body > * {
 }
 
 .blog-entry {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
 	display: flex;
 	justify-content: space-between;
+}
+
+.blog-date {
+	white-space: nowrap;
 }
 
 footer {
