--- a/static/template.html.ejs
+++ b/static/template.html.ejs
@@ -56,6 +56,7 @@
 			<span id="links">
 				<a href="/blog.html">Blog</a>
 				<a href="/contact.html">Contact</a>
+				<a href="/hire.html">Hire</a>
 			</span>
 		</nav>
 		<main>
