--- a/www/style.css
+++ b/www/style.css
@@ -12,10 +12,12 @@ html, body {
 }
 
 body {
-	font-family: Garamond, serif;
+	font-family: 'Courier New', monospace;
 	margin: 0;
 	color: var(--fg);
-	background: var(--bg);
+	background: linear-gradient(#eee, #bbb);
+	background-attachment: fixed;
+	/*background: var(--bg);*/
 	position: relative;
 }
 
