--- a/www/style.css
+++ b/www/style.css
@@ -15,9 +15,7 @@ body {
 	font-family: 'Courier New', monospace;
 	margin: 0;
 	color: var(--fg);
-	background: linear-gradient(#eee, #bbb);
-	background-attachment: fixed;
-	/*background: var(--bg);*/
+	background: var(--bg);
 	position: relative;
 }
 
